
	* src/app-utils/prefs.scm -- combine all the Advanced prefs into one
	  location.  Then add the "New Search Limit" preference.
	* src/gnome-search/dialog-search.c --Use the "New Search Limit" pref
	  to decide when to start a new search vs. when refine the search.
	  Really fix #97095.

	* configure.in: scrub GNOME_PRINT_CFLAGS
	
2003-01-18  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-core/gncTaxTable.[ch]: add functions to
	  get the GUID and lookup by direct GUID (suitable for wrapping)
	* src/business/business-core/gw-business-core-spec.scm: wrap
	  the taxtable get-guid and lookup methods
	* src/business/business-gnome/business-utils.[ch]: re-implement
	  the "generic option menu" code to allow get_value(), set_value(),
	  and changed_callback() functions.
	* src/business/business-gnome/business-options.c: create a taxtable
	  option type using the new generic optionmenu code
	* src/business/business-gnome/business-options.scm: define a taxtable
	  option.  Also fix all the other options when using a KVP storage
	  to actually load and save the options properly
	* src/business/business-gnome/business-prefs.scm: create a default
	  customer and default vendor taxtable option for the "File Properties"
	  option menu.

	  Initial fix for #93462.  Next commit will actually use the values.

	move code around a lot.
	* Rename a bunch of files:
	  business-options to business-options-gnome
	  business-utils to business-gnome-utils
	  - this required changes to a bunch of files in business-gnome
	* move business-options.scm and business-prefs.scm to business-utils
	* create a business-utils gnc-module
	  - required changes to configure.in, business/Makefile.am
	  - added a bunch of files (generally moved from business-gnome)
	* moved a bunch of other non-gnome definitions out of the gnome-specific
	  locations (gnome-utils -> app-utils, or business-gnome -> business-utils)

	* gncEntryLedgerLoad.c: commented-out code to load tax-tables from